BE: created admin routes to add users and edit their info
